--- a/sass/patterns/_full-width.scss
+++ b/sass/patterns/_full-width.scss
@@ -26,7 +26,7 @@
 }
 
 .tab-panel > .full-width {
-  margin-top: 0;
+  padding-top: 0;
 }
 
 .toolbar + .full-width {
